# awq

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
awq/: calibrate.py  cli.py  export.py  inference.py  models.py  quantize.py  scales.py
data/: loader.py  natural_calibration.json
data/processed/: calibration.json  evaluation.json
docs/: architecture.md  benchmarks.md  calibration.md  cli.md  development.md  ec2.md  index.md  inference.md  pipeline.md  quantization.md
eval/: benchmark.py  metrics.py  ppl.py  runner.py
report/: EXPERIMENT_REPORT.md
research/: awq-int4-runtime.md
results/: BASELINE.md  baseline_report.json  fp16_baseline.json
results/qwen_awq_int4/: metadata.json
tests/: test_export.py  test_pipeline.py
utils/: errors.py  memory.py
