[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awq"
version = "0.2.0"
description = "Model-agnostic AWQ (Activation-aware Weight Quantization) CLI"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Ege Sabanci" },
]

requires-python = ">=3.10"
dependencies = [
    "torch>=2.4.0",
    "transformers>=4.43.0",
    "datasets>=3.0.0",
    "safetensors>=0.4.0",
    "accelerate>=1.0.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
]

[project.scripts]
awq = "awq.__main__:main"

[project.urls]
Repository = "https://github.com/egesabanci/awq"

[tool.hatch.build.targets.wheel]
packages = [
    "awq",
    "data",
    "utils",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]
